fixed-images-not-visible

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -83,7 +83,7 @@ ul {
 
 /* <================ Hero ===================> */
 .hero-section-container {
-  background: url("/assets/images/hero-bg.jpg") no-repeat center center/cover;
+  background: url("assets/images/hero-bg.jpg") no-repeat center center/cover;
   height: 100%;
   width: 100%;
   display: flex;
